fix exaggerated z-index for state 2 inputs

--- a/styl/state-2.styl
+++ b/styl/state-2.styl
@@ -6,6 +6,9 @@
 
 .state-2
 
+  .clip-overflow
+    overflow hidden
+
   .nametag-body
     position absolute
     background #FD971F
